src/styles/components/_cake-baku.scss
.cake-baku {
  background-color: $main-gold;
  margin: 50px 0;
  padding: 50px 0;
  overflow-x: hidden;
  &__wrapper {
    display: flex;
  }
  &__img {
    position: relative;
    z-index: 1;
    object-fit: cover;
    overflow: hidden;
    height: 70vh;
    display: block;
    width: 100%;
    object-fit: cover;
    object-position: top center;
    overflow: hidden;
    &-pattern {
      position: absolute;
      top: -18px;
      left: -24px;
      z-index: 0;
      width: 250px !important;
    }
    &-alt {
      position: absolute;
      width: 50%;
      bottom: -30px;
      right: -50px;
      z-index: 2;
    }
  }
  &__picture {
    position: relative;
    width: 50%;
    padding: 10px;
  }
  &__info {
    width: 50%;
    color: #fff;
    padding-left: 60px;
    display: flex;
    flex-direction: column;
    &-title {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      font-size: 36px;
      color: #fff;
      img {
        display: block;
        width: 40%;
        margin-top: -40px;
      }
    }
    &-desc {
      font-family: $second-font;
      font-size: 24px;
      text-align: justify;
      padding-left: 10px;
      margin: 5px 0 10px;
    }
    &-btn {
      position: relative;
      top: 0;
      right: 35px;
      align-self: flex-end;
      width: 250px;
      height: 50px;
      margin: 0;
      display: flex;
      justify-content: center;
      align-items: center;
      background: none;
      border: none;
      a {
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        font-size: 18px;
        display: flex;
        justify-content: center;
        align-items: center;
        background: rgba(255, 255, 255, 0.2);
        box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
        border-top: 1px solid rgba(255, 255, 255, 0.1);
        border-radius: 30px;
        padding: 17px;
        letter-spacing: 1px;
        text-decoration: none;
        overflow: hidden;
        color: #fff;
        font-weight: 400px;
        z-index: 1;
        transition: 0.5s;
        backdrop-filter: blur(55px);
        &:hover {
          letter-spacing: 3px;
        }
        &::before {
          content: "";
          position: absolute;
          top: 0;
          left: 0;
          width: 50%;
          height: 100%;
          background: linear-gradient(to left, rgba(255, 255, 255, 0.3), transparent);
          transform: skewX(45deg) translate(0);
          transition: 0.5s;
          filter: blur(0px);
        }
      }
      &:hover a::before {
        transform: skewX(45deg) translate(200px);
      }
    }
  }
  &__stats {
    backdrop-filter: blur(15px);
    width: 90px;
    padding: 10px;
    color: #fff;
    margin-bottom: 20px;
    align-self: flex-end;
    &-num {
      display: inline-block;
      font-weight: 700;
      font-size: 28px;
      margin-bottom: 5px;
      i {
        padding-right: 5px;
        font-weight: 700;
      }
    }
    &-desc {
      font-size: 12px;
    }
  }
}
@media (max-width: 1024px) {
  .cake-baku {
    &__wrapper {
      flex-direction: column;
    }
    &__picture {
      margin: 0 auto;
      width: 80%;
    }
    &__img {
      height: 50vh;
    }
    &__info {
      width: 100%;
      padding-top: 15px;
      padding-left: 0;
      &-btn {
        align-self: center;
      }
      &-desc {
        padding-left: 0;
      }
    }
  }
}

@media (max-width: 576px) {
  .cake-baku {
    &__wrapper {
      flex-direction: column;
    }
    &__picture {
      margin: 0 auto;
      width: 80%;
    }
    &__img {
      height: 30vh;
      &-alt {
        right: -15px;
      }
    }
    &__info {
      &-title {
        font-size: 28px;
        margin-bottom: 0;
        img {
          margin-top: -20px;
        }
      }
      &-desc {
        font-size: 22px;
      }
      &-btn {
        width: 50vw;
      }
    }
  }
}

